feature/revision : revision 2

--- a/pages/day02.html
+++ b/pages/day02.html
@@ -294,8 +294,8 @@
             </table>
             <ul class="content-list">
               <li>
-                grid layout을 사용해 아래와 같이 페이지에 출력하세요 (각 cell의
-                규격: 300px * 200px).
+                grid layout을 사용해 아래와 같이 페이지에 출력하세요 (우측 하단
+                보라색 cell의 규격: 300px * 200px).
               </li>
               <li>
                 모든 색깔은 css/color.css에 지정한 변수를 불러 사용해야 합니다.
@@ -348,8 +348,8 @@
             </table>
             <ul class="content-list">
               <li>
-                ex00의 코드를 수정하여 아래 사진과 같이 페이지에 출력하세요 (각
-                cell의 규격: 300px (min) * 300px).
+                ex00의 코드를 수정하여 아래 사진과 같이 페이지에 출력하세요
+                (우측 하단 cell의 규격: 300px (min) * 300px).
               </li>
               <li>
                 모든 색깔은 css/color.css에 지정한 변수를 불러 사용해야 합니다.
